--- a/src/Bundle/WebBundle/Resources/views/Frontend/Regimen/macros.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Regimen/macros.html.twig
@@ -18,7 +18,7 @@
                 <th class="prototype">{{ accard_resource_sort('prototype', 'accard.regimen.form.prototype'|trans) }}</th>
                 <th class="patient">{{ accard_resource_sort('patient', 'accard.regimen.form.patient'|trans) }}</th>
                 <th class="start-date">{{ accard_resource_sort('startDate', 'accard.regimen.form.start_date'|trans) }}</th>
-                <th class="end-date">{{ accard_resource_sort('endDate', 'accard.regimen.form.end_date'|trans) }}<th>
+                <th class="end-date">{{ accard_resource_sort('endDate', 'accard.regimen.form.end_date'|trans) }}</th>
                 <th class="actions"></th>
             </tr>
         </thead>
