--- a/src/Bundle/WebBundle/Resources/views/Frontend/Sample/sourceForm.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Sample/sourceForm.html.twig
@@ -23,7 +23,7 @@
             {{ form_row(form.amount) }}
         </div>
         <div class="col-md-6">
-            
+            {{ form_row(form.sourceDate) }}
         </div>
     </div>
 </div>
