--- a/src/Bundle/WebBundle/Resources/views/Frontend/Patient/index.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Patient/index.html.twig
@@ -21,7 +21,7 @@
 {% block content %}
     {% block patient_title %}
         {{ page_title(
-            'accard.patient.title.index'|trans,
+            'accard.patient.action.index'|trans,
             [
                 create(path('accard_frontend_patient_create'), 'accard.patient.action.create'|trans),
                 designBtn
