--- a/src/Bundle/WebBundle/Resources/views/Frontend/Patient/macros.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Patient/macros.html.twig
@@ -5,25 +5,14 @@
 {# For the full copyright and license information, please view the LICENSE #}
 {# file that was distributed with this source code. #}
 
-{% macro abstractable(patient) %}
-{% spaceless %}
-    {% for phase in patient.phases %}
-        {% if 'ready_for_abstraction' == phase.phase.label %}
-            {{ 'success' }}
-        {% endif %}
-    {% endfor %}
-{% endspaceless %}
-{% endmacro %}
-
 {% macro list(patients) %}
 
-{% from _self import abstractable %}
 {% from 'AccardWebBundle:Common/Macros:alerts.html.twig' import info %}
 {% from 'AccardWebBundle:Common/Macros:buttons.html.twig' import edit, delete, show %}
 {% from 'AccardWebBundle:Common/Macros:misc.html.twig' import label, icon %}
 
 {% if patients|length > 0 %}
-    <table class="patient table table-bordered table-striped table-hover">
+    <table id="patients" class="patient table table-bordered table-striped table-hover">
         <thead>
             <tr>
                 <th class="mrn">{{ accard_resource_sort('mrn', 'accard.patient.form.mrn'|trans) }}</th>
@@ -37,7 +26,7 @@
         </thead>
         <tbody>
         {% for patient in patients %}
-            <tr id="{{ patient.id }}" class="{{ abstractable(patient) }}">
+            <tr id="patient-{{ patient.id }}">
                 <td class="mrn">{{ patient.mrn }}</td>
                 <td class="first-name">{{ patient.firstName }}</td>
                 <td class="last-name">{{ patient.lastName }}</td>
@@ -86,7 +75,7 @@
 {% from 'AccardWebBundle:Common/Macros:misc.html.twig' import label, icon %}
 
 {% if patients|length > 0 %}
-    <table class="patient table table-bordered table-striped table-hover">
+    <table id="patients" class="patient table table-bordered table-striped table-hover">
         <thead>
             <tr>
                 <th class="mrn">{{ accard_resource_sort('mrn', 'accard.patient.form.mrn'|trans) }}</th>
@@ -100,7 +89,7 @@
         </thead>
         <tbody>
         {% for patient in patients %}
-            <tr id="{{ patient.id }}"
+            <tr id="patient-{{ patient.id }}"
                 data-toggle="popover"
                 data-trigger="hover"
                 data-html="true"
