boootstrap datepicker has been added for all browsers

--- a/src/Bundle/WebBundle/Resources/views/Backend/layout.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Backend/layout.html.twig
@@ -179,6 +179,7 @@
     {% block javascripts -%}
         {% javascripts output='assets/compiled/backend.js'
             'bundles/accardweb/js/plugins/modernizr/modernizr.js'
+            'bundles/accardweb/js/plugins/datepicker/bootstrap-datepicker.js'
             'bundles/accardweb/js/jquery.js'
             'bundles/accardweb/js/bootstrap.js'
             'bundles/accardweb/js/accard.js'
