--- a/src/Bundle/WebBundle/Resources/views/Common/Macros/misc.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Common/Macros/misc.html.twig
@@ -6,21 +6,20 @@
 {# file that was distributed with this source code. #}
 
 {% macro pagination(paginator, options) %}
-{% if paginator.haveToPaginate()|default(false) %}
 <div class="row">
     <div class="col-xs-9">
+    {% if paginator.haveToPaginate()|default(false) %}
         {{ pagerfanta(paginator, 'twitter_bootstrap3_translated', options|default({})) }}
+    {% endif %}
     </div>
 
+    {% if paginator.nbResults > 0 %}
     <div class="col-xs-3">
-        <div class="pull-right">
-            <div class="btn-group paginator">
-                {{ accard_resource_paginate(paginator, [10,20,30]) }}
-            </div>
-        </div>
+        {{ accard_resource_paginate(paginator, [5,10,25,50]) }}
     </div>
+    {% endif %}
 </div>
-{% endif %}
+
 {% endmacro %}
 
 {% macro page_title(title, buttons) %}
