--- a/src/Bundle/WebBundle/Resources/views/Backend/Activity/prototypeCreate.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Backend/Activity/prototypeCreate.html.twig
@@ -14,3 +14,13 @@
 
 {% block form_page_title_translation 'accard.activity_prototype.action.create'|trans %}
 {% block form_submit_action path('accard_backend_activity_prototype_create') %}
+
+{% block form_body %}
+    {{ parent() }}
+    <div class="row">
+        <div class="col-md-12">
+            {{ form_widget(form.allowDrug) }}
+        </div>
+    </div>
+    <hr>
+{% endblock %}
