--- a/src/Bundle/WebBundle/Resources/views/Frontend/Activity/form.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Activity/form.html.twig
@@ -23,6 +23,9 @@
     <div class="row">
         <div class="col-md-6 row-split">
             {{ form_row(form.diagnosis) }}
+            {% if form.drug is defined %}
+                {{ form_row(form.drug) }}
+            {% endif %}
         </div>
         <div class="col-md-6">
             {{ form_row(form.activityDate) }}
