--- a/src/Bundle/WebBundle/Resources/views/Frontend/Regimen/form.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Regimen/form.html.twig
@@ -26,6 +26,9 @@
         {{ form_row(form.diagnosis) }}
         {{ form_row(form.startDate) }}
         {{ form_row(form.endDate) }}
+        {% if form.drug is defined %}
+            {{ form_row(form.drug) }}
+        {% endif %}
     </div>
     <div class="col-md-6">
         <div id="activities" data-prototype="{{ _self.activity_form(form.activities.vars.prototype)|e }}">
